# axum-simple-key-value-store

./: Cargo.toml  LICENSE  readme.md
src/: main.rs
