[package]
name = "axum-simple-key-value-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
maplit = "1.0.2"
tokio = { version = "1.35.1", features = ["full"] }
axum = "0.7.4"
serde = "1.0.195"
tower = "0.4.13"
